Sat Apr  5 10:13:26 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_stdlib.inl:
          Fix ACE_OS::abort() on Android triggering segfaults.

Fri Apr  4 12:32:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_34_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New C++ compiler feature test

Fri Apr  4 11:17:44 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Make linking the shared STL library dependent on static_libs_only.

Fri Apr  4 08:38:05 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Refactoring to improve functionality and stability of running
          tests on Android Virtual Device (AVD).

        * bin/PerlACE/Process_Unix.pm:
          Small correction in remote PID retrieval.


Thu Mar 27 09:34:54 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Added support for copying system libraries to emulator target.

Mon Mar 24 10:27:40 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/TestTarget.pm:
          Improve remote (-shell) testing support.

        * include/makeinclude/platform_android.GNU:
          Add required standard libraries for rtti, exceptions and (shared)
          stl support on Android.

Sun Mar 23 22:55:42 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Exclude some OpenDDS logging macros from the test
          coverage

Fri Mar 21 19:58:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          Fix windows warnings

Mon Mar 17 10:41:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
